RESOLVED FIXED234148
Incorrect size when aspect-ratio is combined with width
https://bugs.webkit.org/show_bug.cgi?id=234148
Summary Incorrect size when aspect-ratio is combined with width
Adam Seckel
Reported 2021-12-10 07:14:59 PST
In latest Safari 15, as well as Safari Technology Preview, combining aspect-ratio and width does not result in the correct element height. An element with width: 352px and an aspect-ratio: 352 / 490 should result in a height of 490px (Latest Chrome and Firefox). In Safari however, it results in ~500.xx px AN older version of Chrome (91.0.4472.164) also resulted in 500, but this has now been fixed by 96.0.4664.93 (not entirely clear which version fixed it. Please see the reproduction attached in the code sandbox below. https://codesandbox.io/s/aspect-ratio-calculation-d866x?file=/src/index.js
Attachments
Patch (11.43 KB, patch)
2021-12-14 02:43 PST, Rob Buis
no flags
Patch (11.58 KB, patch)
2021-12-14 06:09 PST, Rob Buis
no flags
Radar WebKit Bug Importer
Comment 1 2021-12-10 10:16:20 PST
Rob Buis
Comment 2 2021-12-14 02:43:26 PST
EWS Watchlist
Comment 3 2021-12-14 02:44:28 PST
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
Manuel Rego Casasnovas
Comment 4 2021-12-14 04:31:41 PST
Comment on attachment 447119 [details] Patch r=me
Rob Buis
Comment 5 2021-12-14 06:09:41 PST
EWS
Comment 6 2021-12-14 08:21:26 PST
Committed r287023 (245228@main): <https://commits.webkit.org/245228@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 447126 [details].
Adam Seckel
Comment 7 2021-12-14 10:14:37 PST
Thanks for the swift progress on this folks! 🙌
Brent Fulgham
Comment 8 2022-02-04 10:29:42 PST
This change should be present in STP 139, iOS 15.4 Beta, and macOS 12.3 Beta.
Note You need to log in before you can comment on or make changes to this bug.